src/styles/sections/pricing.less
section#pricing {
  .pricing-graphic-row {
    border-bottom: @default-rule;
  }

  .pricing-graphic {
    display: grid;
    grid-template-columns: repeat(4, 25%);
    grid-template-rows: repeat(3, auto);
    padding: 0;

    * > {
      border-bottom: @default-rule;

      // center text
      display: grid;
      justify-content: center;
      align-items: center;
      text-align: center;
    }

    @media screen and (max-width: @viewport-width-tablet-landscape) {
      // collapse to 2 columns
      grid-template-columns: repeat(2, 50%);
    }
  }

  .raised {
    grid-column: span 2;
    // span whole column
    grid-row: 1 / -1;
    height: 352px;
    background-color: #fddd84;
    .heading-h2();
    font-weight: @font-weight-bold;
  }

  .net {
    grid-column: span 2;
    height: 216px;
    background-color: #bae1aa;
    .heading-h2();
    font-weight: @font-weight-bold;
  }

  .fee {
    grid-column: span 2;
    height: 72px;
    color: white;
    background-color: #044f54;
    .subheading();
  }

  .fee-staff {
    border-right: @default-rule;
  }

  .fee-staff,
  .fee-tech {
    height: 64px;
    background-color: #c0feff;
    .subheading();
  }

  .fees-row a {
    color: @color-dark-green;
    text-decoration: underline;
  }
}

